Bug 1680063 - Record opaque background color items as part of the DL builders opaque region when using WebRender. r=mstange, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D98541